--- a/scss/main.css
+++ b/scss/main.css
@@ -182,6 +182,7 @@
   height: 52px;
   background-color: transparent;
   padding-left: 50px;
+  overflow: hidden;
 }
 .login-page .form-container form .input input::-moz-placeholder {
   font-size: 12px;
