--- a/scss/pages/_login.scss
+++ b/scss/pages/_login.scss
@@ -54,6 +54,7 @@
           @include dimensions($full-width,52px);
           background-color: transparent;
           padding-left: 50px;
+          overflow: hidden;
           &::placeholder {
             font-size: 12px;
             color: $field-color;
