--- a/scss/helpers/_variables.scss
+++ b/scss/helpers/_variables.scss
@@ -1,4 +1,4 @@
-/* Login Vars */
+/// Login Vars
 
 // Colors
 $white: #fff;
@@ -14,3 +14,16 @@ $border-color: #F6F4FF;
 // Numbers
 $full-width: 100%;
 $radius-16: 16px;
+
+
+/// Dashboard Vars
+
+// Colors
+$content-bg: #FAFBFF;
+$disabled: #9197B3;
+$active: #5932EA;
+$linear-start: #EAABF0;
+$linear-end: #4623E9;
+$btn-color: #4925E9;
+$green: #00AC4F;
+$red: #D0004B;
