--- a/scss/helpers/_variables.scss
+++ b/scss/helpers/_variables.scss
@@ -4,28 +4,27 @@
 $white: #fff;
 $black: #000;
 $red: red;
-$light-purple: #9181F4;
-$dark-purple: #5038ED;
+$light-purple: #9181f4;
+$dark-purple: #5038ed;
 $light-gray: #525252;
-$field-bg: #F0EDFF;
-$field-color: #1C1C1C;
-$border-color: #F6F4FF;
+$field-bg: #f0edff;
+$field-color: #1c1c1c;
+$border-color: #f6f4ff;
 
 // Numbers
 $full-width: 100%;
 $radius-16: 16px;
 
-
 /// Dashboard Vars
 
 // Colors
-$content-bg: #FAFBFF;
-$disabled: #9197B3;
-$active: #5932EA;
-$linear-start: #EAABF0;
-$linear-end: #4623E9;
-$btn-color: #4925E9;
-$green: #00AC4F;
-$red: #D0004B;
+$content-bg: #fafbff;
+$disabled: #9197b3;
+$active: #5932ea;
+$linear-start: #eaabf0;
+$linear-end: #4623e9;
+$btn-color: #4925e9;
+$green: #00ac4f;
+$red: #d0004b;
 
-$table-head: #B5B7C0;
+$table-head: #b5b7c0;
